New Favicon Support
git-svn-id: https://plugins.svn.wordpress.org/plugnedit/trunk@812565 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/demo_page.htm
+++ b/demo_page.htm
@@ -1,12 +1,11 @@
-<!DOCTYPE html><html><head><title>Demo Page Title</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="keywords" content="Demo Page Keywords"><meta name="description" content="Demo Page Description"></head><body style="margin:0px;min-width:755px;background-color:#000000"><div id="PNEPageBuilderContent">
-  <div style="text-align: center; position: relative; width: 100%;" id="ICG1ADDON" data-plugneditversion="2" data-precision="Relative" data-hguides="" data-vguides="" data-pnebgcolor="#000000"> 
+<!DOCTYPE html><html><head><title>Demo Page Title</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="keywords" content="Demo Page Keywords"><meta name="description" content="Demo Page Description"></head><body style="margin:0px;min-width:755px;background-color:#00050F"><div id="PNEPageBuilderContent">
+  <div style="text-align: center; position: relative; width: 100%;" id="ICG1ADDON" data-plugneditversion="2" data-precision="Relative" data-hguides="" data-vguides="" data-pnebgcolor="#00050F"> 
     <div id="ICG1ADDONS-Spacer" style="position: static; height: 2003px; width: 0px; background-color: transparent; overflow: visible;"> 
       <link id="Berkshire+Swash" href="http://fonts.googleapis.com/css?family=Berkshire+Swash" data-pnefonts="Berkshire Swash" rel="stylesheet" type="text/css">
       <link id="Courgette" href="http://fonts.googleapis.com/css?family=Courgette" data-pnefonts="Courgette" rel="stylesheet" type="text/css">
       <link id="Redressed" href="http://fonts.googleapis.com/css?family=Redressed" data-pnefonts="Redressed" rel="stylesheet" type="text/css">
     </div>
     <div id="UpperMovableDrawing" style="position: absolute; width: 0px; top: 0px; z-index: 10; left: 50%; overflow: visible;"> 
-      <div id="p1002imageShadow" data-pnelnatrbt="Back Ground Img" data-layertype="image" data-pnelayernumber="1002" data-layeropacity="1" data-layerfilter="100" data-type="MVBDRW" style="opacity: 1; padding: 0px; margin: 0px; zoom: 1; visibility: hidden; border: 3px solid transparent; position: absolute; background-color: transparent; top: 21px; left: -522px; width: 1067px; height: 569px; z-index: 999; overflow: visible; line-height: normal;" data-pnewidth="1028" data-pneheight="541"><img width="1052" id="p1002imageShadowID" src="http://plugnedit.com/assets/bg.png" style="max-width: 100%; border-width: 0px; border-style: none; margin: 0px; width: 1052px; padding: 0px; zoom: 1; text-align: center; line-height: normal;" alt="Back Ground Img" data-pnelayernumber="1002"></div>
       <div id="p1003Movable-drawingmoveDivShadow" data-pnelnatrbt="PNE Title" data-layertype="Movable-drawingmoveDiv" data-pnepermitmove="1" data-pnepermitresize="1" data-layeropacity="1" data-pnelayernumber="1003" data-layerfilter="100" data-type="MVBDRW" style="opacity: 1; margin: 0px; font-size: 12px; border: 3px solid transparent; position: absolute; background-color: transparent; top: 27px; left: -370px; width: 450px; height: 132px; z-index: 1000; overflow: visible; line-height: normal; padding: 3px; border-spacing: 0px;"> 
         <div id="p1003ICGdrawingDiv-NoEdit" data-pnelayernumber="1003" data-pnepermitresize="0" data-pnepermitmove="1" style="font-family: 'Berkshire Swash'; font-size: 79px; background-color: transparent; border: 1px none rgb(0, 0, 0); padding: 3px; border-spacing: 6px; width: 434px; height: 104px; text-align: left; position: relative; margin: 0px auto; overflow: hidden; word-wrap: break-word; letter-spacing: normal; line-height: normal; font-weight: bold; color: rgb(255, 255, 255); text-shadow: rgb(28, 28, 28) -3px -3px 3px;" data-editortype="HTML">Plug 
           <span style="font-family:courgette;"><span style="color:#FF0000;">N</span></span> 
@@ -116,7 +115,6 @@
           <div> </div>
         </div>
       </div>
-    
     </div>
   </div>
 </div></body></html>
