Update demo page.
git-svn-id: https://plugins.svn.wordpress.org/plugnedit/trunk@812569 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/demo_page.htm
+++ b/demo_page.htm
@@ -1,5 +1,5 @@
-<!DOCTYPE html><html><head><title>Demo Page Title</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="keywords" content="Demo Page Keywords"><meta name="description" content="Demo Page Description"></head><body style="margin:0px;min-width:755px;background-color:#00050F"><div id="PNEPageBuilderContent">
-  <div style="text-align: center; position: relative; width: 100%;" id="ICG1ADDON" data-plugneditversion="2" data-precision="Relative" data-hguides="" data-vguides="" data-pnebgcolor="#00050F"> 
+<!DOCTYPE html><html><head><title>Demo Page Title</title><meta http-equiv="Content-Type" content="text/html; charset=UTF-8" /><meta name="keywords" content="Demo Page Keywords"><meta name="description" content="Demo Page Description"></head><body style="margin:0px;min-width:755px;background-color:#09171C"><div id="PNEPageBuilderContent">
+  <div style="text-align: center; position: relative; width: 100%;" id="ICG1ADDON" data-plugneditversion="2" data-precision="Relative" data-hguides="" data-vguides="" data-pnebgcolor="#09171C"> 
     <div id="ICG1ADDONS-Spacer" style="position: static; height: 2003px; width: 0px; background-color: transparent; overflow: visible;"> 
       <link id="Berkshire+Swash" href="http://fonts.googleapis.com/css?family=Berkshire+Swash" data-pnefonts="Berkshire Swash" rel="stylesheet" type="text/css">
       <link id="Courgette" href="http://fonts.googleapis.com/css?family=Courgette" data-pnefonts="Courgette" rel="stylesheet" type="text/css">
